# used_cars_ml_dashbord

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  docker-compose.staging.yml  docker-compose.yml  jira_import.csv  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-etl.txt  requirements.txt  setup.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  data-pipeline.yml  dependabot-auto-merge.yml  promote-model.yml  staging.yml
.streamlit/: config.toml
config/: data_cleaning.yaml
dashboard/: Home.py  _loader.py
dashboard/pages/: 1_Comprador.py  2_Vendedor.py  3_Gestor.py  4_Analise_Avancada.py
data/: used_cars_cleaned.csv  used_cars_removed.csv
data/analysis/: financing_by_manufacturer.csv  manufacturer_price_analysis.csv  top_3_fuel_types.csv  top_5_models.csv  top_5_states_by_price.csv  transmission_distribution.csv
data/cleansed/: quality_report.json  used_cars.parquet
data/export/: cars_powerbi.csv  (+2 more)
docs/: data_cleaning_decisions.md  dax_measures.md  statistical_analysis.md
models/: .gitignore
notebooks/: check_data.py  temp_sql_analysis.py  test_connection.py  test_db.py  test_encoding.py
presentation/: apresentacao.pptx
reports/: data_quality_20250406_230106.json
sandbox/: README.md
scripts/: Home.py  analyze_cleaned_data.py  analyze_low_prices.py  check_data_quality.py  create_clean_view.py  generate_financing_report.py  generate_market_report.py  load_to_postgres.py  market_analysis.py  market_analysis_report.py  market_dashboard.py  promote_model.py  run_dashboard.py  run_etl.py  run_market_analysis.py  run_migration.py  setup.py  setup_dev.py  setup_wsl_docker.sh  setup_wsl_ubuntu.ps1  train_model.py  update_installment_data.py  view_cars_sample.py
src/: __init__.py  app.py  dashboard.py
tests/: test_pipeline.py
venv310/: pyvenv.cfg
(+82 files in other folders)
